5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4078/executions/1789_1613.log
== TEST (2019-05-29 18:17:09) 
-- CODE:
from numpy import *
x = array(int(input("ALONGAMENTO: ")))
y = array(int(input("CORRIDA: ")))
a = array(int(input("DANCA: ")))
b = array(int(input("HIDROGINASTICA:")))
vetor = (3.0, 10.3, 6.7, 9.7, 5.0)
print(round,2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:18:19) 
-- CODE:
from numpy import *
x = array(int(input("ALONGAMENTO: ")))
y = array(int(input("CORRIDA: ")))
a = array(int(input("DANCA: ")))
b = array(int(input("HIDROGINASTICA:")))
vetor = ("minutos")
print(round,2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:18:37) 
-- CODE:
from numpy import *
x = array(int(input("ALONGAMENTO: ")))
y = array(int(input("CORRIDA: ")))
a = array(int(input("DANCA: ")))
b = array(int(input("HIDROGINASTICA:")))
vetor = ("minutos")
print(round,2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:20:41) 
-- CODE:
from numpy import *
x = array(int(input("ALONGAMENTO: ")))
y = array(int(input("CORRIDA: ")))
z = array(int(input("DANCA: ")))
a = array(int(input("ESCALADA:")))
b = array(int(input("HIDROGINASTICA:")))
vetor = ("minutos")
print(round,2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:21:05) 
-- CODE:
from numpy import *
x = (int(input("ALONGAMENTO: ")))
y = array(int(input("CORRIDA: ")))
z = array(int(input("DANCA: ")))
a = array(int(input("ESCALADA:")))
b = array(int(input("HIDROGINASTICA:")))
vetor = ("minutos")
print(round,2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:24:13) 
-- CODE:
from numpy import *
x = array(int(input("ALONGAMENTO: ")))
y = array(int(input("CORRIDA: ")))
z = array(int(input("DANCA: ")))
a = array(int(input("ESCALADA:")))
b = array(int(input("HIDROGINASTICA:")))
x = 3.0
y = 10.3
z = 6.7
a = 9.7
b = 5.0

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:24:46) 
-- CODE:
from numpy import *
x = array(int(input("ALONGAMENTO: ")))
y = array(int(input("CORRIDA: ")))
z = array(int(input("DANCA: ")))
a = array(int(input("ESCALADA:")))
b = array(int(input("HIDROGINASTICA:")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:25:02) 
-- CODE:
from numpy import *
x = array(int(input("ALONGAMENTO: ")))
y = array(int(input("CORRIDA: ")))
z = array(int(input("DANCA: ")))
a = array(int(input("ESCALADA:")))
b = array(int(input("HIDROGINASTICA:")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:26:00) 
-- CODE:
from numpy import *
x = array(int(input("ALONGAMENTO: ")))
y = array(int(input("CORRIDA: ")))
z = array(int(input("DANCA: ")))
a = array(int(input("ESCALADA:")))
b = array(int(input("HIDROGINASTICA:")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:26:28) 
-- CODE:
from numpy import *
x = array(int(input("ALONGAMENTO: ")))
y = array(int(input("CORRIDA: ")))
z = array(int(input("DANCA: ")))
a = array(int(input("ESCALADA:")))
b = array(int(input("HIDROGINASTICA:")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:29:38) 
-- CODE:
from numpy import *
x = array(int(input("ALONGAMENTO","CORRIDA","DANCA","ESCALADA","HIDROGINASTICA"))


-- ERROR:
File "XXXX", line 4
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:29:49) 
-- CODE:
from numpy import *
x = array(int(input("ALONGAMENTO","CORRIDA","DANCA","ESCALADA","HIDROGINASTICA"))
-- ERROR:
File "XXXX", line 3
    
                                                                                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:31:35) 
-- CODE:
from numpy import *
x = array(int(input(["ALONGAMENTO","CORRIDA","DANCA","ESCALADA","HIDROGINASTICA"]))
-- ERROR:
File "XXXX", line 3
    
                                                                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:35:30) 
-- CODE:
from numpy import *
x = array(int(input("ALONGAMENTO:")))
y = array(int(input("CORRIDA: ")))
Z = array(int(input("DANCA: ")))
a = array(int(input("ESCALADA: ")))
B = array(int(input("HIDROGINATICA: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:36:36) 
-- CODE:
from numpy import *
x = array(float(input("ALONGAMENTO:")))
y = array(int(input("CORRIDA: ")))
Z = array(int(input("DANCA: ")))
a = array(int(input("ESCALADA: ")))
B = array(int(input("HIDROGINATICA: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:37:01) 
-- CODE:
from numpy import *
x = array(float(input("ALONGAMENTO:")))
y = array(float(input("CORRIDA: ")))
Z = array(int(input("DANCA: ")))
a = array(int(input("ESCALADA: ")))
B = array(int(input("HIDROGINATICA: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:37:41) 
-- CODE:
from numpy import *
x = array(float(input("ALONGAMENTO:")))
y = array(float(input("CORRIDA: ")))
Z = array(float(input("DANCA: ")))
a = array(float(input("ESCALADA: ")))
B = array(float(input("HIDROGINATICA: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:40:27) 
-- CODE:
from numpy import *
x = array(float(input("ALONGAMENTO:")))
y = array(float(input("CORRIDA: ")))
Z = array(float(input("DANCA: ")))
a = array(float(input("ESCALADA: ")))
B = array(float(input("HIDROGINATICA: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:42:25) 
-- CODE:
from numpy import *
x = array(float(input("ALONGAMENTO:")))
y = array(float(input("CORRIDA: ")))
Z = array(float(input("DANCA: ")))
a = array(float(input("ESCALADA: ")))
B = array(float(input("HIDROGINATICA: ")))
vetor

-- EXECUTION TIME:
0.596942
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1789/1613/main.py", line 2, in <module>
    x = array(float(input()))
ValueError: could not convert string to float: '["HIDROGINASTICA","DANCA","CORRIDA"]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:42:31) 
-- CODE:
from numpy import *
x = array(float(input("ALONGAMENTO:")))
y = array(float(input("CORRIDA: ")))
Z = array(float(input("DANCA: ")))
a = array(float(input("ESCALADA: ")))
B = array(float(input("HIDROGINATICA: ")))
vetor

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:43:09) 
-- CODE:
from numpy import *
x = array(float(input("ALONGAMENTO:")))
y = array(float(input("CORRIDA: ")))
Z = array(float(input("DANCA: ")))
a = array(float(input("ESCALADA: ")))
B = array(float(input("HIDROGINATICA: ")))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:46:44) 
-- CODE:
from numpy import *
alongamento = array(float(input("ALONGAMENTO:")))
corrida = array(float(input("CORRIDA: ")))
danca = array(float(input("DANCA: ")))
escalada = array(float(input("ESCALADA: ")))
hidroginastica = array(float(input("HIDROGINATICA: ")))
vetor = (3.0, 10.3, 6.7, 9.7, 5.0)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:47:26) 
-- CODE:
from numpy import *
alongamento = array(float(input("ALONGAMENTO:")))
corrida = array(float(input("CORRIDA: ")))
danca = array(float(input("DANCA: ")))
escalada = array(float(input("ESCALADA: ")))
hidroginastica = array(float(input("HIDROGINATICA: ")))
vetor = (3.0, 10.3, 6.7, 9.7, 5.0)
print(round,2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:49:43) 
-- CODE:
from numpy import *
alongamento = array(float(input("ALONGAMENTO:")))
corrida = array(float(input("CORRIDA: ")))
danca = array(float(input("DANCA: ")))
escalada = array(float(input("ESCALADA: ")))
hidroginastica = array(float(input("HIDROGINATICA: ")))
vetor = [3.0 10.3 6.7 9.7 5.0]


-- ERROR:
File "XXXX", line 7
    vetor = [3.0 10.3 6.7 9.7 5.0]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:50:08) 
-- CODE:
from numpy import *
alongamento = array(float(input("ALONGAMENTO:")))
corrida = array(float(input("CORRIDA: ")))
danca = array(float(input("DANCA: ")))
escalada = array(float(input("ESCALADA: ")))
hidroginastica = array(float(input("HIDROGINATICA: ")))
vetor = [3.0, 10.3, 6.7, 9.7, 5.0]


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:52:13) 
-- CODE:
from numpy import *
alongamento = array(float(input("ALONGAMENTO:")))
corrida = array(float(input("CORRIDA: ")))
danca = array(float(input("DANCA: ")))
escalada = array(float(input("ESCALADA: ")))
hidroginastica = array(float(input("HIDROGINATICA: ")))
vetor = [3.0, 10.3, 6.7, 9.7, 5.0]
total = [3.0, 10.3, 6.7, 9.7, 5.0]

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:53:03) 
-- CODE:
from numpy import *
alongamento = array(float(input("ALONGAMENTO:")))
corrida = array(float(input("CORRIDA: ")))
danca = array(float(input("DANCA: ")))
escalada = array(float(input("ESCALADA: ")))
hidroginastica = array(float(input("HIDROGINATICA: ")))
vetor = [3.0, 10.3, 6.7, 9.7, 5.0]
total = [3.0, 10.3, 6.7, 9.7, 5.0]
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:53:08) 
-- CODE:
from numpy import *
alongamento = array(float(input("ALONGAMENTO:")))
corrida = array(float(input("CORRIDA: ")))
danca = array(float(input("DANCA: ")))
escalada = array(float(input("ESCALADA: ")))
hidroginastica = array(float(input("HIDROGINATICA: ")))
vetor = [3.0, 10.3, 6.7, 9.7, 5.0]
total = [3.0, 10.3, 6.7, 9.7, 5.0]
print(round(total,2))
-- EXECUTION TIME:
0.4588
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1789/1613/main.py", line 2, in <module>
    alongamento = array(float(input()))
ValueError: could not convert string to float: '["HIDROGINASTICA","DANCA","CORRIDA"]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:53:12) 
-- CODE:
from numpy import *
alongamento = array(float(input("ALONGAMENTO:")))
corrida = array(float(input("CORRIDA: ")))
danca = array(float(input("DANCA: ")))
escalada = array(float(input("ESCALADA: ")))
hidroginastica = array(float(input("HIDROGINATICA: ")))
vetor = [3.0, 10.3, 6.7, 9.7, 5.0]
total = [3.0, 10.3, 6.7, 9.7, 5.0]
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:53:52) 
-- CODE:
from numpy import *
alongamento = array(float(input("ALONGAMENTO:")))
corrida = array(float(input("CORRIDA: ")))
danca = array(float(input("DANCA: ")))
escalada = array(float(input("ESCALADA: ")))
hidroginastica = array(float(input("HIDROGINATICA: ")))
vetor = [3.0, 10.3, 6.7, 9.7, 5.0]
total = [3.0, 10.3, 6.7, 9.7, 5.0]
print(round,2)
-- EXECUTION TIME:
0.381967
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1789/1613/main.py", line 2, in <module>
    alongamento = array(float(input("ALONGAMENTO:")))
ValueError: could not convert string to float: '["HIDROGINASTICA","DANCA","CORRIDA"]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:54:51) 
-- CODE:
from numpy import *
alongamento = array(float(input("ALONGAMENTO:")))
corrida = array(float(input("CORRIDA: ")))
danca = array(float(input("DANCA: ")))
escalada = array(float(input("ESCALADA: ")))
hidroginastica = array(float(input("HIDROGINATICA: ")))
vetor = (minutos)
total = [3.0, 10.3, 6.7, 9.7, 5.0]
print(round,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:57:43) 
-- CODE:
from numpy import *
alongamento = array(float(input("ALONGAMENTO:")))
corrida = array(float(input("CORRIDA: ")))
danca = array(float(input("DANCA: ")))
escalada = array(float(input("ESCALADA: ")))
hidroginastica = array(float(input("HIDROGINATICA: ")))
vetor =(alogamento 3.0, c) 
total = [3.0, 10.3, 6.7, 9.7, 5.0]
print(round,2)
-- ERROR:
File "XXXX", line 7
    vetor =(alogamento 3.0, c) 
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:57:56) 
-- CODE:
from numpy import *
alongamento = array(float(input("ALONGAMENTO:")))
corrida = array(float(input("CORRIDA: ")))
danca = array(float(input("DANCA: ")))
escalada = array(float(input("ESCALADA: ")))
hidroginastica = array(float(input("HIDROGINATICA: ")))
vetor =(alogamento 3.0,) 
total = [3.0, 10.3, 6.7, 9.7, 5.0]
print(round,2)
-- ERROR:
File "XXXX", line 7
    vetor =(alogamento 3.0,) 
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:58:30) 
-- CODE:
from numpy import *
alongamento = array(float(input("ALONGAMENTO:")))
corrida = array(float(input("CORRIDA: ")))
danca = array(float(input("DANCA: ")))
escalada = array(float(input("ESCALADA: ")))
hidroginastica = array(float(input("HIDROGINATICA: ")))
vetor =("ALONGAMENTO" 3.0,) 
total = [3.0, 10.3, 6.7, 9.7, 5.0]
print(round,2)
-- ERROR:
File "XXXX", line 7
    vetor =("ALONGAMENTO" 3.0,) 
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:00:04) 
-- CODE:
from numpy import *
alongamento = array(float(input("ALONGAMENTO:")))
corrida = array(float(input("CORRIDA: ")))
danca = array(float(input("DANCA: ")))
escalada = array(float(input("ESCALADA: ")))
hidroginastica = array(float(input("HIDROGINATICA: ")))
vetor = () 
total = [3.0, 10.3, 6.7, 9.7, 5.0]
print(round,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:00:40) 
-- CODE:
from numpy import *
alongamento = array(float(input("ALONGAMENTO:")))
corrida = array(float(input("CORRIDA: ")))
danca = array(float(input("DANCA: ")))
escalada = array(float(input("ESCALADA: ")))
hidroginastica = array(float(input("HIDROGINATICA: ")))
vetor = () 
total = [3.0, 10.3, 6.7, 9.7, 5.0]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:01:48) 
-- CODE:
from numpy import *
alongamento = array(float(input("ALONGAMENTO:")))
corrida = array(float(input("CORRIDA: ")))
danca = array(float(input("DANCA: ")))
escalada = array(float(input("ESCALADA: ")))
hidroginastica = array(float(input("HIDROGINATICA: ")))
vetor = (Kcal/min) 
total = [3.0, 10.3, 6.7, 9.7, 5.0]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:03:21) 
-- CODE:
from numpy import *
alongamento = array(float(input("ALONGAMENTO:")))
corrida = array(float(input("CORRIDA: ")))
danca = array(float(input("DANCA: ")))
escalada = array(float(input("ESCALADA: ")))
hidroginastica = array(float(input("HIDROGINATICA: ")))
vetor = ("minutos" ) 
total = [3.0, 10.3, 6.7, 9.7, 5.0]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:05:30) 
-- CODE:
from numpy import *
alongamento = array(float(input("ALONGAMENTO:")))
corrida = array(float(input("CORRIDA: ")))
danca = array(float(input("DANCA: ")))
escalada = array(float(input("ESCALADA: ")))
hidroginastica = array(float(input("HIDROGINATICA: ")))
vetor = (alongamento,corrida,danca,escalada,hidroginastica) 
total = [3.0, 10.3, 6.7, 9.7, 5.0]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:08:35) 
-- CODE:
from numpy import *
alongamento = array(float(input("ALONGAMENTO:")))
corrida = array(float(input("CORRIDA: ")))
danca = array(float(input("DANCA: ")))
escalada = array(float(input("ESCALADA: ")))
hidroginastica = array(float(input("HIDROGINATICA: ")))
vetor = ("ALONGAMENTO,CORRIDA,DANCA,ESCALADA,HIDROGINASTICA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
